# diffvg

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  cuda_utils.h  diffvg.cpp  pyproject.toml  requirements-build.txt  requirements.txt  setup.py  sitecustomize.py
scripts/: test_diffvg_minimal.py
