[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "diffvg"
version = "0.2.0"
description = "Differentiable Vector Graphics rasterizer (PyTorch bindings)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{ name = "Tzu-Mao Li et al." }]
keywords = ["graphics", "differentiable", "vector", "rasterizer", "pytorch"]
dependencies = [
  "svgpathtools>=1.4",
  "cssutils>=2.2.0",
  "matplotlib>=3.0"
]

[project.urls]
Homepage = "https://github.com/Hemistone/diffvg"
Repository = "https://github.com/Hemistone/diffvg"
Issues = "https://github.com/Hemistone/diffvg/issues"

[tool.scikit-build]
wheel.packages = ["pydiffvg"]
build.verbose = true

[tool.scikit-build.sdist]
exclude = [
  ".venv*",
  "**/.venv*",
  "dist",
  "build",
  ".git",
  ".github"
]
